# softies

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  index.html
src/: TODOs.md  app.rs  creature.rs  creature_attributes.rs  creature_ui.rs  lib.rs  main.rs  snake.rs  ui.rs
src/creatures/: demo.rs  mod.rs  plankton.rs  simple_chain.rs  snake.rs  test_chain.rs
