[package]
name = "softies"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
eframe = "0.27.2"
egui = "0.27.2"
rapier2d = { version = "0.19.0", features = ["wasm-bindgen", "serde-serialize"] }
nalgebra = "0.32.5"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[[bin]]
name = "softies"
path = "src/main.rs"
